--- a/Copy to SD Card root directory to update - Unified Menu Material theme/config.ini
+++ b/Copy to SD Card root directory to update - Unified Menu Material theme/config.ini
@@ -76,7 +76,7 @@ terminal_ack:0
 #### invert X axis button function in Move menu to match move buttons to actual axis
 # Options: [enable: 1, disable: 0]
 # Invert Axis format      [ X<option> Y<option> Z<option> E<option>]
-invert_axis:X0 Y0 Z0
+invert_axis:X0 Y0 Z1
 
 #### Persistent temperature info
 # show persistent temperature info on all menu screens
@@ -156,7 +156,7 @@ fan_max:F0:255 F1:255 F2:255 F3:255 F4:255 F5:255
 # minimum size limit format [size_min: X<minimum distance> Y<minimum distance> Z<minimum distance>]
 # maximum size limit format [size_max: X<maximum distance> Y<maximum distance> Z<maximum distance>]
 size_min:X0 Y0 Z0
-size_max:X235 Y235 Z250
+size_max:X297 Y210 Z200
 
 #### default Move Speeds (mm/min)
 # Options: [Slow: S, Normal: N, Fast: F]
@@ -225,16 +225,16 @@ level_feedrate:X6000 Y6000 Z6000
 # Maximum Filament name length 7 characters
 #format [T<hotend temp> B<bed temp>]
 preheat_name1:PLA
-preheat_temp1:T200 B60
+preheat_temp1:T205 B60
 
-preheat_name2:PETG
-preheat_temp2:T200 B60
+#preheat_name2:PETG
+#preheat_temp2:T200 B60
 
-preheat_name3:ABS
-preheat_temp3:T230 B90
+#preheat_name3:ABS
+#preheat_temp3:T230 B90
 
-preheat_name4:TPU
-preheat_temp4:T220 B50
+#preheat_name4:TPU
+#preheat_temp4:T220 B50
 
 #--------------------------------------------------------------------
 # Power Supply Settings (if connected to TFT Controller)
@@ -294,7 +294,7 @@ btt_mini_ups:0
 
 #### Buzzer / sound
 # Options: [enable: 1, disable: 0]
-buzzer:1
+buzzer:0
 
 #### Knob Led Color (only for TFT35 E3.0)
 #Options: [LED_OFF: 0, LED_WHITE: 1, LED_RED: 2, LED_ORANGE: 3, LED_YELLOW: 4, LED_GREEN: 5, LED_BLUE: 6, LED_INDIGO: 7, LED_VIOLET: 8]
