--- a/Copy to SD Card root directory to update - Unified Menu Material theme/config.ini
+++ b/Copy to SD Card root directory to update - Unified Menu Material theme/config.ini
@@ -227,14 +227,14 @@ level_feedrate:X6000 Y6000 Z6000
 preheat_name1:PLA
 preheat_temp1:T205 B60
 
-#preheat_name2:PETG
-#preheat_temp2:T200 B60
+preheat_name2:PETG
+preheat_temp2:T200 B60
 
-#preheat_name3:ABS
-#preheat_temp3:T230 B90
+preheat_name3:ABS
+preheat_temp3:T230 B90
 
-#preheat_name4:TPU
-#preheat_temp4:T220 B50
+preheat_name4:TPU
+preheat_temp4:T220 B50
 
 #--------------------------------------------------------------------
 # Power Supply Settings (if connected to TFT Controller)
